--- a/app/src/views/roomDetail/index.less
+++ b/app/src/views/roomDetail/index.less
@@ -1,6 +1,6 @@
-// body{
-//   background-color: #fff;
-// }
+.add_bg_roomDetail{
+  background-color: #fff;
+}
 .randomColorBox{
   width: 50px;
   height: 50px;
