--- a/app/src/views/JoinRoom/index.less
+++ b/app/src/views/JoinRoom/index.less
@@ -1,7 +1,11 @@
-.add_bg_JoinRoom {
+// .add_bg_JoinRoom {
+//     background-color: #10495c;
+// }
+#page{
+    width: 100%;
+    height: 100vh;
     background-color: #10495c;
 }
-
 .header {
     height: 40px;
 }
