--- a/app/src/views/roomDetail/index.less
+++ b/app/src/views/roomDetail/index.less
@@ -1,6 +1,76 @@
-.add_bg_roomDetail{
-  background-color: #fff;
+#operatingBox1{
+  width: 100%;
+  height: 100vh;
+  background-image: url('@/assets/image/RoomdetailBg.jpg');
+  background-size: 100% 100%;
+  padding-top: 4rem;
+  box-sizing: border-box;
+  color: #fff;
 }
+// icon 图标可操作
+.icon{
+  @icon-size: 30px;
+  width: @icon-size;
+  height: @icon-size;
+  cursor: pointer;
+  &:hover{
+    color: #ccc;
+  }
+}
+
+// icon 图标不可操作
+.iconDisabled{
+  @icon-size: 20px;
+  width: @icon-size;
+  height: @icon-size;
+  margin-right: 5px;
+}
+
+// 操作框
+#operatingBox{
+  width: 70%;
+  height: 87vh;
+  background-color: #fff;
+  margin: auto;
+  border-radius: 15px;
+  overflow: hidden;
+}
+
+// 顶部
+.top{
+  background-color: #754d4d;
+  height:90px;
+  border-radius: 15px 15px 0 0;
+  padding: 20px;
+  display: flex;
+  gap:20px;
+  .roomNumber{
+    font-weight: bold;
+  }
+}
+// 左侧边
+.left{
+  width: 200px;
+  height: 100%;
+  border-radius: 0 0 0 15px;
+  background-color: #272a37;
+  padding: 20px;
+}
+// 中间内容区域
+.main{
+  height: 100%;
+  background-color: #593535;
+  overflow: hidden;
+}
+// 右侧边
+.right{
+  width: 200px;
+  box-sizing: border-box;
+  border-radius: 0 0 15px 0;
+  padding: 20px;
+  background-color: #686666;
+}
+// 组队颜色盒子
 .randomColorBox{
   width: 50px;
   height: 50px;
