--- a/app/src/views/roomDetail/index.less
+++ b/app/src/views/roomDetail/index.less
@@ -8,6 +8,17 @@
   color: #e2dfdfe8;
 }
 
+// 队伍颜色
+.memberTeamColor {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  box-sizing: border-box;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  margin-right: 5px;
+}
+
 // icon 图标可操作
 .icon {
   @icon-size: 30px;
@@ -256,14 +267,14 @@
 
 // 右侧边
 .right {
-  width: 210px;
+  width: 280px;
   box-sizing: border-box;
   border-radius: 0 0 15px 0;
   padding: 20px 10px;
   background-color: #272a37;
 
   &-box {
-    padding: 20px;
+    padding: 20px 10px;
     box-sizing: border-box;
     background-color: #323644;
     height: 540px;
@@ -274,6 +285,7 @@
 .randomColorBox {
   width: 50px;
   height: 50px;
+  border: 2px solid #ffffffda;
   transition: background-color 0.1s ease;
   border-radius: 50%;
 }
