--- a/app/src/views/roomDetail/index.less
+++ b/app/src/views/roomDetail/index.less
@@ -15,6 +15,7 @@
   height: 20px;
   box-sizing: border-box;
   border: 1px solid #fff;
+  transition: background-color 0.1s ease;
   border-radius: 50%;
   margin-right: 5px;
 }
