切换文件夹

--- a/src/views/roomDetail/media.less
+++ b/src/views/roomDetail/media.less
@@ -1,9 +1,9 @@
 // 媒体查询
 @media screen and (max-width: 1400px) {
     #operatingBox {
-        // .right {
-        //     display: none;
-        // }
+        .right {
+            display: none;
+        }
     }
 
 }
