--- a/src/views/roomDetail/index.less
+++ b/src/views/roomDetail/index.less
@@ -177,12 +177,34 @@
       }
 
       // 分队情况
-      .teamSituation {
+      .score {
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 15px;
-        .box(250px);
+        .box(420px);
+        overflow: hidden;
+        // 毛玻璃
+        backdrop-filter: blur(100px);
+
+        &-body {
+          font-size: 10px;
+          margin-top: 10px;
+
+          &:first-child {
+            margin-top: 0;
+          }
+
+          &-time {
+            font-size: 10px;
+          }
+
+          &-score {
+            font-size: 16px;
+            color: #169c39;
+            font-weight: bold;
+          }
+        }
 
         &-member {
           width: 100%;
