add:队伍修改名字和颜色

--- a/src/views/roomDetail/index.less
+++ b/src/views/roomDetail/index.less
@@ -346,6 +346,12 @@
   cursor: pointer;
 }
 
+
+//.item .el-dialog-item__label{
+//  color:#f56c6c;
+//  font-weight:bold;
+//  font-size:20px
+//}
 // 选择队伍对话框子队伍
 .chooseATeamFatherDialogBox {
   display: flex;
