fix:修改用户名bug add:计时器样式

--- a/src/views/roomDetail/index.less
+++ b/src/views/roomDetail/index.less
@@ -97,7 +97,8 @@
     // 右边
     .right {
       width: 250px;
-      // background-color: #fff;
+      max-height: 90px;
+      padding: 0;
     }
 
   }
